--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
   "dependencies": {
-    "express": "^4.17.2"
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "config": "^3.3.7",
+    "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
+    "helmet": "^5.0.2",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "mongoose": "^4.12.3",
+    "nodemon": "^2.0.15",
+    "winston": "^3.5.0",
+    "winston-mongodb": "^5.0.7"
   }
 }
