--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "debug": "^2.6.9",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
