--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+        "start": "nodemon index.js"
+    },
     "dependencies": {
         "@hapi/joi": "^17.1.1",
         "bcrypt": "^5.0.1",
