--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "mongoose": "^6.1.8",
+        "mongoose-paginate": "^5.0.3",
         "nodemon": "^2.0.15",
         "winston": "^3.5.0",
         "winston-mongodb": "^5.0.7"
